Clarify JEP statuses for JDK 24–26 and document Structured Concurrency matrix with preview guidance (#62)
* Уточнить статусы возможностей Java 24-26

* Разрешить конфликт метаданных Java-версий